[metadata]
name = gambit_pub
version = 0.1
description = Common code for GAMBIT publication repo.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jared Lumpe
author_email = mjlumpe@gmail.com
url = https://github.com/jlumpe/gambit-publication


[options]
include_package_data = true

python_requires = >=3.6

install_requires =
	# Dependencies go here

test_require =
	pytest

packages = find:


# Aliases for setuptools commands
[aliases]
test = pytest


# Pytest settings
[tool:pytest]

# Run tests in tests/, obviously
# Also check docstrings in package
testpaths = tests gambit_pub

# Run doctests on all modules
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL


# Flake8 settings
[flake8]

# Ignore these codes:
ignore =
	# TABS ARE BETTER
	W191,
	# indentation contains mixed spaces and tabs - spaces for alignment
	E101,
	# Blank line at end of file - we require this in .editorconfig
	W391

# Exclude these paths:
exclude = docs

# Check style of doctests (not working?)
doctests = True
